--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <!-- Слайдер -->
 
       <main class="page">
-        <section class="page_section page_section_1">
-          <h1 class="page_title">Наши товары:</h1>
+        <section class="page_section page_section_1 header-h1">
+          <h2 class="page_title">Наши товары:</h2>
           <div class="page_text">
             <div class="gallery swiper-container">
               <div class="gallery_list swiper-wrapper">
@@ -135,7 +135,7 @@
 
         <!--  -->
         <!-- Карта -->
-        <section class="page_section page_section_3">
+        <section class="page_section page_section_3 header-h1">
           <h2 class="page_sub-title">Наш Адрес:</h2>
           <iframe
             class="maps"
@@ -146,11 +146,14 @@
           ></iframe>
         </section>
 
+        
         <section class="page_section page_section_4">
+          <div class="header-h2">
           <h2 class="page_sub-title">Контакты:</h2>
           <div class="page_text">
-            <h4>Звони и Заказывай: +7(967)6477785</h4>
+            <h2>Звони и Заказывай: +7(967)6477785</h2>
           </div>
+        </div>
         </section>
       </main>
     </div>
