--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="header-h2">
           <h2 class="page_sub-title">Контакты:</h2>
           <div class="page_text">
-            <h2>Звони и Заказывай: +7(967)6477785</h2>
+            <h2>Звони и Заказывай: <a class="phone" href="tel:+79676477785">+7(967)6477785</h2>
           </div>
         </div>
         </section>
