--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="header _animate">
         <div class="header_container">
           <a href="" class="header_logo"> </a>
           <div class="header_menu menu">
@@ -53,8 +57,8 @@
 
       <main class="page">
         <section class="page_section page_section_1 header-h1">
-          <h2 class="page_title">Наши товары:</h2>
-          <div class="page_text">
+          <h2 class="page_title animate__animated animate__jackInTheBox">Наши товары:</h2>
+          <div class="page_text animate__animated animate__slideInLeft">
             <div class="gallery swiper-container">
               <div class="gallery_list swiper-wrapper">
                 <div class="gallery_item swiper-slide">
@@ -136,7 +140,7 @@
         <!--  -->
         <!-- Карта -->
         <section class="page_section page_section_3 header-h1">
-          <h2 class="page_sub-title">Наш Адрес:</h2>
+          <h2 class="page_sub-title _animate">Наш Адрес:</h2>
           <iframe
             class="maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.1940105837584!2d39.71144341586537!3d43.62332077912232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40f5cb7f21e05a31%3A0x2fda899f591eabd4!2z0YPQuy4g0KHQsNC90LDRgtC-0YDQvdCw0Y8sIDI1LCDQodC-0YfQuCwg0JrRgNCw0YHQvdC-0LTQsNGA0YHQutC40Lkg0LrRgNCw0LksIDM1NDAwOA!5e0!3m2!1sru!2sru!4v1616560796352!5m2!1sru!2sru"
@@ -149,8 +153,8 @@
         
         <section class="page_section page_section_4">
           <div class="header-h2">
-          <h2 class="page_sub-title">Контакты:</h2>
-          <div class="page_text">
+          <h2 class="page_sub-title _animate">Контакты:</h2>
+          <div class="page_text page_text--animate _animate">
             <h2>Звони и Заказывай: <a class="phone" href="tel:+79676477785">+7(967)6477785</h2>
           </div>
         </div>
@@ -158,6 +162,7 @@
       </main>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="animate.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
