--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <main class="page">
         <section class="page_section page_section_1 header-h1">
-          <h2 class="page_title animate__animated animate__jackInTheBox">Наши товары:</h2>
+          <h2 class="page_title animate__animated animate__slideInLeft ">Наши товары:</h2>
           <div class="page_text animate__animated animate__slideInLeft">
             <div class="gallery swiper-container">
               <div class="gallery_list swiper-wrapper">
@@ -154,8 +154,8 @@
         <section class="page_section page_section_4">
           <div class="header-h2">
           <h2 class="page_sub-title _animate">Контакты:</h2>
-          <div class="page_text page_text--animate _animate">
-            <h2>Звони и Заказывай: <a class="phone" href="tel:+79676477785">+7(967)6477785</h2>
+          <div class="page_text">
+            <h2 class="animateCall _animate" >Звони и Заказывай: <a class="phone" href="tel:+79676477785">+7(967)6477785</h2>
           </div>
         </div>
         </section>
